navbar + footer + overflow issues corrected

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 h1 {
   font-family: Borcha, Glacial-Indifference, Courier, monospace;
   letter-spacing: 0.03em;
+  max-width: 100vw;
 }
 h2,
 h3,
@@ -36,8 +37,6 @@ h1 {
   font-weight: 100;
   margin: 0;
   padding: 2rem;
-  /* text-align: left; */
-  width: 1200px;
 }
 h2 {
   font-size: calc(1rem + 10vw);
@@ -60,7 +59,6 @@ h4 {
 
 a {
   font-family: Netflix;
-  font-size: smaller;
   text-decoration: none;
   margin: 0 10px;
   opacity: 0.85;
@@ -68,6 +66,12 @@ a {
   color: #cc9933;
 }
 
+footer a {
+  font-size: calc(0.4rem + 0.4vw);
+}
+.navbar a {
+  font-size: calc(0.6rem + 0.4vw);
+}
 p {
   font-family: Glacial-Indifference;
   opacity: 0.85;
@@ -85,12 +89,16 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3em;
+  margin-bottom: 3em;
 }
 .centered-container {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .column {
@@ -102,9 +110,9 @@ p {
   flex-direction: row;
   gap: 8em;
   flex-wrap: wrap;
-  max-width: 80%;
-  margin-left: 10%;
+  max-width: 100%;
   margin-bottom: 5%;
+  justify-content: center;
 }
 .card {
   width: 320px;
